# dev-rel-skills

./: CLAUDE.md  README.md  install-skills.sh
.claude/skills/de-llmify/: SKILL.md
.claude/skills/get-blog-candidates/: SKILL.md
.claude/skills/hn-scout/: SKILL.md
demos/: blog-pr-676-m-decompose.md  blog-release-v0.4.0.md  hn-scout-2026-04-02.md  tweet-pr-676-m-decompose.md
pipeline-ui/: .gitignore  PLAN.md  README.md  pyproject.toml  start.sh
pipeline-ui/backend/: config.py  main.py
pipeline-ui/backend/models/: database.py  schemas.py
pipeline-ui/backend/routers/: artifacts.py  pipelines.py  stages.py  stream.py
pipeline-ui/backend/services/: agent_runner.py  output_manager.py  pipeline_state.py  skill_loader.py
pipeline-ui/frontend/: index.html  package-lock.json  package.json
pipeline-ui/frontend/src/: App.tsx
pipeline-ui/frontend/src/api/: client.ts  sse.ts
pipeline-ui/frontend/src/components/: ArtifactPicker.tsx  ConfigForm.tsx  MarkdownEditor.tsx  MarkdownViewer.tsx  PipelineBar.tsx  RunsSidebar.tsx  StagePanel.tsx  StreamingOutput.tsx
pipeline-ui/frontend/src/hooks/: usePipeline.ts  useSSE.ts
pipeline-ui/frontend/src/styles/: main.css
pipeline-ui/frontend/src/types/: index.ts
skills/blog-to-video-script/: SKILL.md
skills/get-blog-candidates/: SKILL.md
skills/hn-scout/: SKILL.md
skills/hn-scout-generic/: SKILL.md
skills/link-preview/: SKILL.md
skills/release-blog/: SKILL.md
skills/research-project/: SKILL.md
skills/validate-snippets/: SKILL.md
skills/write-technical-blog/: SKILL.md
skills/write-tweet/: SKILL.md
(+3 files in other folders)
