[project]
name = "pipeline-ui"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.32.0,<1.0",
    "claude-agent-sdk>=0.1.0",
    "aiosqlite>=0.20.0,<1.0",
    "sse-starlette>=2.1.0,<3.0",
    "pydantic>=2.9.0,<3.0",
    "pydantic-settings>=2.6.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]
